fixing or spacing

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -134,8 +134,8 @@
     margin-bottom: 10px;
 }
 
-.or p::before, .or p::after {
-    display: inline-block;
-    border-top: 1px solid lightgray;
-    overflow: hidden
-}
+// .or p::before, .or p::after {
+//     display: inline-block;
+//     border-top: 1px solid lightgray;
+//     overflow: hidden
+// }
